--- a/RandomQuoteMachine/RandomQuote.IntegrationTest/RandomQuote.IntegrationTest.csproj
+++ b/RandomQuoteMachine/RandomQuote.IntegrationTest/RandomQuote.IntegrationTest.csproj
@@ -15,8 +15,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170425-07" />
-    <PackageReference Include="NUnit" Version="3.8.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="1.1.1" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
